Revert  Please enter the commit message for your changes. Lines starting"
This reverts commit 644aec27d69d934d046a9e69e5a89a3a08e91c34.

--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@
 [class^=icon-], [class*=" icon-"] {
 	/* use !important to prevent issues with browser extensions that change fonts */
 	font-family: "icomoon" !important;
+	speak: never;
 	font-style: normal;
 	font-weight: normal;
 	font-variant: normal;
@@ -134,7 +135,6 @@ body.lock {
 	    -ms-flex-direction: column;
 	        flex-direction: column;
 }
-
 .main {
 	-webkit-box-flex: 1;
 	    -ms-flex: 1 0 auto;
