--- a/css/style.css
+++ b/css/style.css
@@ -113,6 +113,7 @@ h6 {
 }
 
 body {
+	background: #ffffff;
 	color: #000;
 	font-size: 14px;
 	font-family: "Roboto", sans-serif;
@@ -367,7 +368,7 @@ body.lock {
 	margin: 0 0 0 3px;
 }
 .header__button {
-	background: #fff;
+	background: transparent;
 	padding: 10px 15px;
 	border: 1px solid #E0E0E0;
 	margin: 0 30px 0 0;
@@ -376,6 +377,9 @@ body.lock {
 	color: #000;
 	font-weight: 600;
 	font-size: 16px;
+}
+.header__button.dark-mode a {
+	color: #fff;
 }
 .header__cart {
 	background: #fff;
@@ -538,6 +542,35 @@ body.lock {
 	}
 }
 
+.change-mode {
+	margin-right: 50px;
+}
+.change-mode__button {
+	position: relative;
+	width: 77px;
+	height: 41px;
+	border: 1px solid #E0E0E0;
+	border-radius: 20px;
+	background: #E0E0E0;
+}
+.change-mode__button::after {
+	content: "";
+	width: 39px;
+	height: 39px;
+	border-radius: 50%;
+	background: #000000;
+	position: absolute;
+	left: 0;
+	top: 0;
+	-webkit-transition: all 0.3s ease-out 0.1s;
+	-o-transition: all 0.3s ease-out 0.1s;
+	transition: all 0.3s ease-out 0.1s;
+}
+.change-mode .active.change-mode__button::after {
+	left: calc(100% - 39px);
+	background: #ffffff;
+}
+
 .footer {
 	background: #262626;
 	padding: 50px 0 50px;
@@ -667,6 +700,17 @@ body.lock {
 	}
 }
 
+.dark-mode {
+	background-color: #000000;
+	color: #ffffff;
+}
+.dark-mode p {
+	color: #ffffffff;
+}
+.dark-mode h2 {
+	color: #ffffff91;
+}
+
 .title {
 	font-family: Roboto;
 	font-style: normal;
@@ -687,6 +731,7 @@ body.lock {
 	color: #626262;
 	opacity: 0.5;
 	border-bottom: 1px solid #757575;
+	background: transparent;
 }
 
 .section {
@@ -728,6 +773,9 @@ body.lock {
 
 .card:first-of-type {
 	background: #F9F9F9;
+}
+.card.dark-mode:first-of-type {
+	background: #f9f9f91e;
 }
 .card__image {
 	width: 100%;
