--- a/#source/scss/header.scss
+++ b/#source/scss/header.scss
@@ -60,6 +60,13 @@
 		order: -1;
 	}
 	}
+	@media (max-width: $md4+px){
+&__button {
+		padding: 7px 10px;
+		margin: 0 15px 0 0;
+}
+	}
+	
 }
 .menu {
 	position: relative;
@@ -233,4 +240,31 @@ width: 20px;
 		background: #ffffff;
 	
 	}
+
+	@media (max-width: $md4+px){
+		margin-right: 15px;
+		&__button{
+			width: 48px;
+			height: 31px;
+			border: 1px solid #E0E0E0;
+			border-radius: 20px;
+			background: #E0E0E0;
+			
+			&::after{
+				content: '';
+				width: 29px;
+				height: 29px;
+				border-radius: 50%;
+				background: #000000;
+				position: absolute;
+				left: 0;
+				top: 0;
+				transition: all 0.3s ease-out 0.1s;
+			}
+	}
+	.active.change-mode__button::after{
+		left: calc(100% - 29px);
+	
+	}
+}
 }
